@@ -60,3 +60,7 @@ class IStudy(Interface):
 class IContactPerson(Interface):
     """ Marker interface for contact person.
     """
+
+class ITheme(Interface):
+    """ A theme folder
+    """
