@@ -4,6 +4,9 @@ History of this buildout
 5.1.14 (unreleased)
 -------------------
 
+- Add CT theme (folder)
+  [coen]
+
 - Rename werkveld > theme
   [coen]
 
